[package]
name = "elytra-conf"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Embedded configuration library to enable standardized setup using WebUSB or serial"
version.workspace = true

[dependencies]
bitflags = { version = "2.10.0" }
log = { workspace = true }
defmt = {version = "1.0", optional = true}
elytra-bytepack = { path = "../elytra-bytepack" }


[dependencies.strum]
version = "0.27.2"
default-features = false
features = ["derive"]

[dependencies.num_enum]
version = "0.7.4"
features = []
default-features = false


[features]
default = ["macros", "async"]
alloc = []
defmt = ["dep:defmt"]
macros = []
async = []

# only used to hide warnings about unused code
unused = []
