[package]
name = "elytra-mock"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = { version = "0.4.42", default-features =  false }
chrono-tz = { version = "0.10" }
log = { workspace = true }
elytra-conf = { path = "../elytra-conf", features = ["alloc"]}
elytra-macros = { path = "../elytra-macros" }
elytra-wasm = { path = "../elytra-wasm" }

# [target.wasm32-unknown-unknown.dependencies]
# elytra-wasm = { path = "../elytra-wasm" }